<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateCompleteActivity">
    <Button
            android:text="@string/cmpBookmarkBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/cmpBookmarkBtn"
            app:layout_constraintTop_toBottomOf="@+id/cmpAdView"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:gravity="center_horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/cmpImageViewSET"
            android:id="@+id/linearLayout">
        <TextView
                android:text="@string/completeText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/completeText1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/completeText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/completeText2" android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="24sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/completeText3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"
                android:textSize="24sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/completeText4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"
                android:text="@string/completeText4" android:textSize="24sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/completeText5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"
                android:text="@string/completeText5" android:textSize="24sp"/>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cmpImageViewSET" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:contentDescription="@string/none"
            app:srcCompat="@drawable/img_success"/>
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cmpAdView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitCmpId"/>
</androidx.constraintlayout.widget.ConstraintLayout>