<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditMainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/edit1TravelTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1TravelTitleText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    android:visibility="visible" tools:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/edit1GuideText" android:layout_marginTop="24dp"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:background="@color/light_blue"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit1TravelTitle" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit1TravelTitleText" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:hint="@string/edit1TravelTitle" android:visibility="visible" tools:visibility="visible"
                    android:importantForAutofill="no" tools:targetApi="o"/>
            <TextView
                    android:text="@string/edit1DepartureDayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1DepartureDayText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/edit1TravelTitle"
                    android:visibility="visible" tools:visibility="visible" android:background="@color/light_blue"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1TravelDays"
                    android:textColor="@android:color/black"
                    android:background="@android:color/background_light"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:gravity="center_horizontal|center_vertical" android:text="@string/edit1TravelDays"
                    app:layout_constraintTop_toBottomOf="@+id/edit1DepartureDayText" android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:visibility="visible" tools:visibility="visible"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/edit1DepartureDay"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@color/timeBackGround" android:hint="@string/edit1DepartureDay"
                    android:gravity="center_horizontal|center_vertical"
                    app:layout_constraintTop_toBottomOf="@+id/edit1TravelDays" android:layout_marginTop="8dp"
                    android:visibility="visible" tools:visibility="visible" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
                    android:id="@+id/edit1TravelArrow"
                    app:layout_constraintBottom_toBottomOf="@+id/edit1DepartureDay"
                    app:layout_constraintTop_toTopOf="@+id/edit1DepartureDay"
                    app:layout_constraintStart_toEndOf="@+id/edit1DepartureDay" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" android:contentDescription="@string/none"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/edit1ArrivalDay"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@color/timeBackGround" android:hint="@string/edit1ArrivalDay"
                    android:gravity="center_horizontal|center_vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/edit1TravelArrow"
                    android:visibility="visible" tools:visibility="visible"
                    app:layout_constraintStart_toEndOf="@+id/edit1TravelArrow" android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toTopOf="@+id/edit1TravelArrow"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1DepartureText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:text="@string/edit1DepartureText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:visibility="visible" tools:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/edit1DepartureDay" android:layout_marginTop="24dp"
                    android:background="@color/light_blue"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit1DeparturePlace" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit1DepartureText" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:hint="@string/enterDeparturePlace"
                    android:text="@string/currentPlace" android:visibility="visible" tools:visibility="visible"
                    android:importantForAutofill="no" tools:targetApi="o"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1ArrivalText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/edit1ArrivalText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:visibility="visible" tools:visibility="visible"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/edit1DeparturePlace"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    android:background="@color/light_blue"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit1ArrivalPlace"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:hint="@string/enterArrivalPlace"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit1ArrivalText"
                    android:text="@string/currentPlace" android:visibility="visible" tools:visibility="visible"
                    android:importantForAutofill="no" tools:targetApi="o"/>
            <Button
                    android:text="@string/update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1ApplyButton" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/edit1ArrivalPlace"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="18sp"/>
            <Button
                    android:text="@string/Back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1BackToMain"
                    app:layout_constraintTop_toTopOf="@+id/edit1GuideText" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/edit1GuideText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                    android:text="@string/edit1GuideText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit1GuideText"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/edit1BackToMain" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp" android:textSize="30sp"
                    android:gravity="center" android:background="@color/edit_color"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



