<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sc1whereToGoText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="visible" tools:visibility="visible"
                android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
                tools:text="- Day 1 -" android:background="@color/light_blue"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sc1destination1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:hint="@string/firstDestination" android:visibility="visible" tools:visibility="visible"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sc1whereToGoText"
                android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sc1destination2"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:visibility="visible" android:hint="@string/secondDestination" tools:visibility="visible"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sc1destination1"
                android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sc1destination3"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone" android:hint="@string/thirdDestination" tools:visibility="visible"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sc1destination2"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sc1destination4"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:visibility="gone" android:hint="@string/forthDestination"
                tools:visibility="visible"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sc1destination3"
                android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sc1destination5"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:visibility="gone" android:hint="@string/fifthDestination"
                tools:visibility="visible" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sc1destination4" android:importantForAutofill="no" tools:targetApi="o"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/sc1destination6"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:visibility="gone" android:hint="@string/sixthDestination"
                tools:visibility="visible" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sc1destination5" android:importantForAutofill="no" tools:targetApi="o"/>
        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sc1addDestination"
                android:textSize="18sp"
                android:visibility="visible" tools:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/sc1removeDestination"
                android:layout_marginStart="32dp" android:layout_marginLeft="32dp"
                app:layout_constraintTop_toTopOf="@+id/sc1removeDestination"
                app:layout_constraintBottom_toBottomOf="@+id/sc1removeDestination"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <Button
                android:text="@string/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sc1removeDestination"
                android:textSize="18sp"
                android:visibility="visible" tools:visibility="visible"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/sc1destination6"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>