<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditScheduleActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/scheduleEditGuide"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="24sp"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/scheduleEditText" android:layout_marginTop="8dp"
                    android:gravity="center" app:layout_constraintEnd_toEndOf="parent" tools:text="- Day 1 -"/>
            <include android:layout_width="0dp" android:layout_height="wrap_content" layout="@layout/sc2_fragment"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:id="@+id/scheduleEditInclude" app:layout_constraintTop_toBottomOf="@+id/scheduleEditGuide"
                     android:layout_marginTop="8dp"/>
            <TextView
                    android:text="@string/scheduleEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/scheduleEditText"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:background="@color/edit_color" android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
                    app:layout_constraintEnd_toStartOf="@+id/scheduleEditBack"/>
            <Button
                    android:text="@string/Back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scheduleEditBack" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/scheduleEditText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <Button
                    android:text="@string/update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/scheduleEditUpdate"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/scheduleEditInclude"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>